t2/AlgumaParser.py
# Generated from Alguma.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AlgumaParser ( Parser ):

    grammarFileName = "Alguma.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'algoritmo'", "'fim_algoritmo'", "'declare'", 
                     "'constante'", "':'", "'='", "'tipo'", "','", "'.'", 
                     "'['", "']'", "'literal'", "'inteiro'", "'real'", "'logico'", 
                     "'^'", "'verdadeiro'", "'falso'", "'registro'", "'fim_registro'", 
                     "'procedimento'", "'('", "')'", "'fim_procedimento'", 
                     "'funcao'", "'fim_funcao'", "'var'", "'leia'", "'escreva'", 
                     "'se'", "'entao'", "'senao'", "'fim_se'", "'caso'", 
                     "'seja'", "'fim_caso'", "'para'", "'<-'", "'ate'", 
                     "'faca'", "'fim_para'", "'enquanto'", "'fim_enquanto'", 
                     "'retorne'", "'..'", "'-'", "'+'", "'*'", "'/'", "'%'", 
                     "'&'", "'<>'", "'>='", "'<='", "'>'", "'<'", "'nao'", 
                     "'ou'", "'e'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENT", "NUM_REAL", "NUM_INT", "CADEIA", "WS", "Comentario", 
                      "Cadeia", "ErroComentario" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_decl_local_global = 2
    RULE_declaracao_local = 3
    RULE_variavel = 4
    RULE_identificador = 5
    RULE_dimensao = 6
    RULE_tipo = 7
    RULE_tipo_basico = 8
    RULE_tipo_basico_ident = 9
    RULE_tipo_estendido = 10
    RULE_valor_constante = 11
    RULE_registro = 12
    RULE_declaracao_global = 13
    RULE_parametro = 14
    RULE_parametros = 15
    RULE_corpo = 16
    RULE_cmd = 17
    RULE_cmdLeia = 18
    RULE_cmdEscreva = 19
    RULE_cmdSe = 20
    RULE_cmdCaso = 21
    RULE_cmdPara = 22
    RULE_cmdEnquanto = 23
    RULE_cmdFaca = 24
    RULE_cmdAtribuicao = 25
    RULE_cmdChamada = 26
    RULE_cmdRetorne = 27
    RULE_selecao = 28
    RULE_item_selecao = 29
    RULE_constantes = 30
    RULE_numero_intervalo = 31
    RULE_op_unario = 32
    RULE_exp_aritmetica = 33
    RULE_termo = 34
    RULE_fator = 35
    RULE_op1 = 36
    RULE_op2 = 37
    RULE_op3 = 38
    RULE_parcela = 39
    RULE_parcela_unario = 40
    RULE_parcela_nao_unario = 41
    RULE_exp_relacional = 42
    RULE_op_relacional = 43
    RULE_expressao = 44
    RULE_termo_logico = 45
    RULE_fator_logico = 46
    RULE_parcela_logica = 47
    RULE_op_logico_1 = 48
    RULE_op_logico_2 = 49

    ruleNames =  [ "programa", "declaracoes", "decl_local_global", "declaracao_local", 
                   "variavel", "identificador", "dimensao", "tipo", "tipo_basico", 
                   "tipo_basico_ident", "tipo_estendido", "valor_constante", 
                   "registro", "declaracao_global", "parametro", "parametros", 
                   "corpo", "cmd", "cmdLeia", "cmdEscreva", "cmdSe", "cmdCaso", 
                   "cmdPara", "cmdEnquanto", "cmdFaca", "cmdAtribuicao", 
                   "cmdChamada", "cmdRetorne", "selecao", "item_selecao", 
                   "constantes", "numero_intervalo", "op_unario", "exp_aritmetica", 
                   "termo", "fator", "op1", "op2", "op3", "parcela", "parcela_unario", 
                   "parcela_nao_unario", "exp_relacional", "op_relacional", 
                   "expressao", "termo_logico", "fator_logico", "parcela_logica", 
                   "op_logico_1", "op_logico_2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    IDENT=60
    NUM_REAL=61
    NUM_INT=62
    CADEIA=63
    WS=64
    Comentario=65
    Cadeia=66
    ErroComentario=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(AlgumaParser.DeclaracoesContext,0)


        def corpo(self):
            return self.getTypedRuleContext(AlgumaParser.CorpoContext,0)


        def getRuleIndex(self):
            return AlgumaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = AlgumaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.declaracoes()
            self.state = 101
            self.match(AlgumaParser.T__0)
            self.state = 102
            self.corpo()
            self.state = 103
            self.match(AlgumaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_local_global(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgumaParser.Decl_local_globalContext)
            else:
                return self.getTypedRuleContext(AlgumaParser.Decl_local_globalContext,i)


        def getRuleIndex(self):
            return AlgumaParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = AlgumaParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 35651736) != 0):
                self.state = 105
                self.decl_local_global()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_local_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self):
            return self.getTypedRuleContext(AlgumaParser.Declaracao_localContext,0)


        def declaracao_global(self):
            return self.getTypedRuleContext(AlgumaParser.Declaracao_globalContext,0)


        def getRuleIndex(self):
            return AlgumaParser.RULE_decl_local_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_local_global" ):
                listener.enterDecl_local_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_local_global" ):
                listener.exitDecl_local_global(self)




    def decl_local_global(self):

        localctx = AlgumaParser.Decl_local_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_local_global)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.declaracao_local()
                pass
            elif token in [21, 25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.declaracao_global()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_localContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self):
            return self.getTypedRuleContext(AlgumaParser.VariavelContext,0)


        def IDENT(self):
            return self.getToken(AlgumaParser.IDENT, 0)

        def tipo_basico(self):
            return self.getTypedRuleContext(AlgumaParser.Tipo_basicoContext,0)


        def valor_constante(self):
            return self.getTypedRuleContext(AlgumaParser.Valor_constanteContext,0)


        def tipo(self):
            return self.getTypedRuleContext(AlgumaParser.TipoContext,0)


        def getRuleIndex(self):
            return AlgumaParser.RULE_declaracao_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_local" ):
                listener.enterDeclaracao_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_local" ):
                listener.exitDeclaracao_local(self)




    def declaracao_local(self):

        localctx = AlgumaParser.Declaracao_localContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_local)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(AlgumaParser.T__2)
                self.state = 116
                self.variavel()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(AlgumaParser.T__3)
                self.state = 118
                self.match(AlgumaParser.IDENT)
                self.state = 119
                self.match(AlgumaParser.T__4)
                self.state = 120
                self.tipo_basico()
                self.state = 121
                self.match(AlgumaParser.T__5)
                self.state = 122
                self.valor_constante()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(AlgumaParser.T__6)
                self.state = 125
                self.match(AlgumaParser.IDENT)
                self.state = 126
                self.match(AlgumaParser.T__4)
                self.state = 127
                self.tipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgumaParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(AlgumaParser.IdentificadorContext,i)


        def tipo(self):
            return self.getTypedRuleContext(AlgumaParser.TipoContext,0)


        def getRuleIndex(self):
            return AlgumaParser.RULE_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariavel" ):
                listener.enterVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariavel" ):
                listener.exitVariavel(self)




    def variavel(self):

        localctx = AlgumaParser.VariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.identificador()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 131
                self.match(AlgumaParser.T__7)
                self.state = 132
                self.identificador()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(AlgumaParser.T__4)
            self.state = 139
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(AlgumaParser.IDENT)
            else:
                return self.getToken(AlgumaParser.IDENT, i)

        def dimensao(self):
            return self.getTypedRuleContext(AlgumaParser.DimensaoContext,0)


        def getRuleIndex(self):
            return AlgumaParser.RULE_identificador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificador" ):
                listener.enterIdentificador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificador" ):
                listener.exitIdentificador(self)




    def identificador(self):

        localctx = AlgumaParser.IdentificadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identificador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(AlgumaParser.IDENT)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 142
                self.match(AlgumaParser.T__8)
                self.state = 143
                self.match(AlgumaParser.IDENT)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.dimensao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgumaParser.Exp_aritmeticaContext)
            else:
                return self.getTypedRuleContext(AlgumaParser.Exp_aritmeticaContext,i)


        def getRuleIndex(self):
            return AlgumaParser.RULE_dimensao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensao" ):
                listener.enterDimensao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensao" ):
                listener.exitDimensao(self)




    def dimensao(self):

        localctx = AlgumaParser.DimensaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimensao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 151
                self.match(AlgumaParser.T__9)
                self.state = 152
                self.exp_aritmetica()
                self.state = 153
                self.match(AlgumaParser.T__10)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def registro(self):
            return self.getTypedRuleContext(AlgumaParser.RegistroContext,0)


        def tipo_estendido(self):
            return self.getTypedRuleContext(AlgumaParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return AlgumaParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = AlgumaParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.registro()
                pass
            elif token in [12, 13, 14, 15, 16, 60]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.tipo_estendido()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basicoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AlgumaParser.RULE_tipo_basico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico" ):
                listener.enterTipo_basico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico" ):
                listener.exitTipo_basico(self)




    def tipo_basico(self):

        localctx = AlgumaParser.Tipo_basicoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipo_basico)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basico_identContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico(self):
            return self.getTypedRuleContext(AlgumaParser.Tipo_basicoContext,0)


        def IDENT(self):
            return self.getToken(AlgumaParser.IDENT, 0)

        def getRuleIndex(self):
            return AlgumaParser.RULE_tipo_basico_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico_ident" ):
                listener.enterTipo_basico_ident(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico_ident" ):
                listener.exitTipo_basico_ident(self)




    def tipo_basico_ident(self):

        localctx = AlgumaParser.Tipo_basico_identContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tipo_basico_ident)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 14, 15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.tipo_basico()
                pass
            elif token in [60]:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(AlgumaParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_estendidoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico_ident(self):
            return self.getTypedRuleContext(AlgumaParser.Tipo_basico_identContext,0)


        def getRuleIndex(self):
            return AlgumaParser.RULE_tipo_estendido

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_estendido" ):
                listener.enterTipo_estendido(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_estendido" ):
                listener.exitTipo_estendido(self)




    def tipo_estendido(self):

        localctx = AlgumaParser.Tipo_estendidoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipo_estendido)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 170
                self.match(AlgumaParser.T__15)


            self.state = 173
            self.tipo_basico_ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Valor_constanteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Cadeia(self):
            return self.getToken(AlgumaParser.Cadeia, 0)

        def NUM_INT(self):
            return self.getToken(AlgumaParser.NUM_INT, 0)

        def NUM_REAL(self):
            return self.getToken(AlgumaParser.NUM_REAL, 0)

        def getRuleIndex(self):
            return AlgumaParser.RULE_valor_constante

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor_constante" ):
                listener.enterValor_constante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor_constante" ):
                listener.exitValor_constante(self)




    def valor_constante(self):

        localctx = AlgumaParser.Valor_constanteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valor_constante)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            _la = self._input.LA(1)
            if not(((((_la - 17)) & ~0x3f) == 0 and ((1 << (_la - 17)) & 615726511554563) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegistroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgumaParser.VariavelContext)
            else:
                return self.getTypedRuleContext(AlgumaParser.VariavelContext,i)


        def getRuleIndex(self):
            return AlgumaParser.RULE_registro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegistro" ):
                listener.enterRegistro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegistro" ):
                listener.exitRegistro(self)




    def registro(self):

        localctx = AlgumaParser.RegistroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_registro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(AlgumaParser.T__18)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==60:
                self.state = 178
                self.variavel()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 184
            self.match(AlgumaParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(AlgumaParser.IDENT, 0)

        def parametros(self):
            return self.getTypedRuleContext(AlgumaParser.ParametrosContext,0)


        def declaracao_local(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgumaParser.Declaracao_localContext)
            else:
                return self.getTypedRuleContext(AlgumaParser.Declaracao_localContext,i)


        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgumaParser.CmdContext)
            else:
                return self.getTypedRuleContext(AlgumaParser.CmdContext,i)


        def tipo_estendido(self):
            return self.getTypedRuleContext(AlgumaParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return AlgumaParser.RULE_declaracao_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_global" ):
                listener.enterDeclaracao_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_global" ):
                listener.exitDeclaracao_global(self)




    def declaracao_global(self):

        localctx = AlgumaParser.Declaracao_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_declaracao_global)
        self._la = 0 # Token type
        try:
            self.state = 229
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.match(AlgumaParser.T__20)
                self.state = 187
                self.match(AlgumaParser.IDENT)
                self.state = 188
                self.match(AlgumaParser.T__21)
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==27 or _la==60:
                    self.state = 189
                    self.parametros()


                self.state = 192
                self.match(AlgumaParser.T__22)
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 152) != 0):
                    self.state = 193
                    self.declaracao_local()
                    self.state = 198
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 202
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1152944750848966656) != 0):
                    self.state = 199
                    self.cmd()
                    self.state = 204
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
